--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -343,7 +343,11 @@ if (BUILD_LIBRARY)
   )
 
 if (WIN32)
-  target_link_options(monero-cpp PUBLIC "-Wl,--enable-auto-import,--export-all-symbols")
+    target_link_options(monero-cpp PUBLIC "-Wl,--enable-auto-import,--export-all-symbols")
+endif()
+
+if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    target_link_options(monero-cpp PRIVATE "-z" "noexecstack")
 endif()
 
   INSTALL(FILES src/daemon/monero_daemon.h
