--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,17 @@ set(BUILD_SAMPLE OFF)
 set(BUILD_SCRATCHPAD OFF)
 set(BUILD_TESTS OFF)
 
+option(STATIC "Build using static libraries")
+if(STATIC)
+  if(WIN32)
+    set(CMAKE_FIND_LIBRARY_SUFFIXES .lib .dll.a .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
+  else()
+    set(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
+  endif()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DZMQ_STATIC")
+endif()
+
+
 ###################
 # monero-project
 ###################
@@ -78,7 +89,11 @@ set(LibUSB_LIBRARIES ${usb_LIBRARY})
 set(Boost_NO_BOOST_CMAKE 1)
 set(Boost_USE_MULTITHREADED ON)
 find_package(Boost 1.58 QUIET REQUIRED COMPONENTS chrono date_time filesystem program_options regex serialization wserialization system thread)
-message(STATUS "Using Boost include dir at ${Boost_INCLUDE_DIR}")
+if(Boost_FOUND)
+  message(STATUS "Using Boost include dir at ${Boost_INCLUDE_DIR}")
+  message(STATUS "Using Boost lib version: ${Boost_LIB_VERSION}")
+  message(STATUS "Using Boost libs: ${Boost_LIBRARIES}")
+endif()
 
 ############
 # OpenSSL
@@ -95,7 +110,10 @@ if (APPLE AND NOT IOS)
 endif()
 
 find_package(OpenSSL REQUIRED)
-message(STATUS "Using OpenSSL include dir at ${OPENSSL_INCLUDE_DIR}")
+if(OPENSSL_FOUND)
+  message(STATUS "Using OpenSSL include dir at ${OPENSSL_INCLUDE_DIR}")
+  message(STATUS "Using OpenSSL libs: ${OPENSSL_LIBRARIES}")
+endif()
 
 if(STATIC AND NOT IOS)
   if(UNIX)
@@ -200,10 +218,6 @@ add_library(cryptonote_core STATIC IMPORTED)
 set_target_properties(cryptonote_core PROPERTIES IMPORTED_LOCATION
     ${MONERO_PROJECT_BUILD}/src/cryptonote_core/libcryptonote_core.a)
 
-add_library(cryptonote_protocol STATIC IMPORTED)
-set_target_properties(cryptonote_protocol PROPERTIES IMPORTED_LOCATION
-    ${MONERO_PROJECT_BUILD}/src/cryptonote_protocol/libcryptonote_protocol.a)
-
 add_library(cryptonote_basic STATIC IMPORTED)
 set_target_properties(cryptonote_basic PROPERTIES IMPORTED_LOCATION
     ${MONERO_PROJECT_BUILD}/src/cryptonote_basic/libcryptonote_basic.a)
@@ -280,7 +294,14 @@ set(
 )
 
 if (BUILD_LIBRARY)
-  add_library(monero-cpp SHARED ${LIBRARY_SRC_FILES})
+
+  if(STATIC)
+      set(BUILD_SHARED_LIBS OFF)
+  else()
+      set(BUILD_SHARED_LIBS ON)
+  endif()
+
+  add_library(monero-cpp ${LIBRARY_SRC_FILES})
 
   target_include_directories(monero-cpp PUBLIC
       ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -312,7 +333,6 @@ if (BUILD_LIBRARY)
       unbound
       easylogging
       cryptonote_core
-      cryptonote_protocol
       cryptonote_basic
       cryptonote_format_utils_basic
       mnemonics
@@ -405,7 +425,6 @@ if (BUILD_SAMPLE)
       lmdb
       easylogging
       cryptonote_core
-      cryptonote_protocol
       cryptonote_basic
       cryptonote_format_utils_basic
       mnemonics
@@ -477,7 +496,6 @@ if (BUILD_SCRATCHPAD)
       lmdb
       easylogging
       cryptonote_core
-      cryptonote_protocol
       cryptonote_basic
       cryptonote_format_utils_basic
       mnemonics
@@ -549,7 +567,6 @@ if (BUILD_TESTS)
       lmdb
       easylogging
       cryptonote_core
-      cryptonote_protocol
       cryptonote_basic
       cryptonote_format_utils_basic
       mnemonics
