--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,8 +275,10 @@ set(
     src/daemon/monero_daemon_model.cpp
     src/daemon/monero_daemon.cpp
     src/wallet/monero_wallet_model.cpp
+    src/wallet/monero_wallet_light_model.cpp
     src/wallet/monero_wallet_keys.cpp
     src/wallet/monero_wallet_full.cpp
+    src/wallet/monero_wallet_light.cpp
 )
 
 if (BUILD_LIBRARY)
@@ -357,9 +359,12 @@ endif()
           src/utils/monero_utils.h
           DESTINATION include/utils)
   INSTALL(FILES src/wallet/monero_wallet_full.h
+          src/wallet/monero_wallet_light.h
           src/wallet/monero_wallet.h
           src/wallet/monero_wallet_keys.h
           src/wallet/monero_wallet_model.h
+          src/wallet/monero_wallet_light_model.h
+          src/wallet/monero_wallet_utils.h
           DESTINATION include/wallet)
   INSTALL(TARGETS monero-cpp
           RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
